# BruteForce-Little-DP

./: App.cpp  App.h  BruteForce.cpp  BruteForce.h  CMakeLists.txt  Config.h  Helpers.cpp  Helpers.h  Little.cpp  Little.h  LittleNew.cpp  LittleNew.h  MatrixModel.cpp  MatrixModel.h  Menu.cpp  Menu.h  Model.cpp  Model.h  README.md  chat6x6.txt  chat8x8.txt  little.txt  main.cpp  matrix5x5.txt  small.txt
algorithms/: BruteForce.cpp  BruteForce.h  DynamicProg.cpp  DynamicProg.h  Little.cpp  Little.h  LittleNew.cpp  LittleNew.h
